...
    )
  }
}


struct DisplayView: View {
  @Binding var display: String

  var body: some View {
      let _ = Self._printChanges()

    HStack {
      if display.isEmpty {
...
